Update to recent incorrigible-dotfiles change

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ run apt-get update && \
     apt-get install -y ctags python python-pip python2.7-dev git-core libpq-dev
 
 run git clone https://github.com/nathanleclaire/incorrigible-dotfiles /incorrigible-dotfiles
-run cd /incorrigible-dotfiles && ./install_dotfiles.sh
+run cd /incorrigible-dotfiles && ./dotfiles install
 
 run mkdir /code
 add requirements.txt /code/requirements.txt
